# skill-overlay-editor

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  vite.config.ts
apps/editor/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/public/tools/: overlay-preview.html
apps/editor/src/: App.tsx
apps/editor/src/canvas/: BoxNode.tsx  FrameNode.tsx  RotationCanvas.tsx  RotationEdge.tsx  SkillNode.tsx  TextNode.tsx  frame.ts
apps/editor/src/inspector/: Inspector.tsx
apps/editor/src/io/: db.ts  exporter.ts  importer.ts  sanitize.test.ts  sanitize.ts  validate.test.ts  validate.ts
apps/editor/src/schema/: rotation.test.ts
apps/editor/src/settings/: SettingsModal.tsx
apps/overlay/: index.html  package.json  settings.html  tsconfig.json  vite.config.ts
apps/overlay/src/: media.ts  overlay.ts  render.ts  rotation.test.ts  rotation.ts  settings.css  settings.ts  styles.css
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/src/: config.rs  input.rs  lib.rs
scripts/: copy-media.mjs
src/: App.tsx  index.css
src/canvas/: FrameNode.tsx  RotationCanvas.tsx  RotationEdge.tsx  SkillNode.tsx  frame.ts
src/inspector/: Inspector.tsx
src/io/: db.ts  exporter.ts  files.ts  importer.ts  validate.test.ts  validate.ts
src/lib/: keybind.ts
src/media/: skills.ts
src/schema/: rotation.test.ts
src/settings/: SettingsModal.tsx
src/state/: editorStore.ts  usePersistence.ts
src/toolbar/: ToolBar.tsx  TopBar.tsx  icons.tsx
(+4 files in other folders)
