[package]
name = "overlay"
version = "0.1.0"
description = "Lost Ark rotation overlay"
authors = ["drpurr"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin on Windows.
name = "overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
